*SVN*

* Uniquely identify servers based on hostname, port, and username, instead of merely on hostname [Jamis Buck]

* Allow (e.g.) scm_command and local_scm_command to be set in the event of different paths to the scm command on local vs. remote hosts. [Jamis Buck]

* Kill the "deploy:app" namespace and move those tasks into deploy, directly. [Jamis Buck]

* Make sure 'desc' applies to the next defined task, in any namespace. [Jamis Buck]

* Fix shell so that servers for a task are correctly discovered. [Jamis Buck]

* Added before(), after(), and on() callback creation methods. [Jamis Buck]

* Fix broken check! method for some deployment strategies. [Jamis Buck]

* deploy:cold should also run migrations before starting the app [Jamis Buck]

* Make the copy strategy check out to a temporary directory [Jamis Buck]


*1.99.0 (2.0 Preview 1)* April 24, 2007

* Add `capify' script to make it easier to prepare a project for deployment using cap [Jamis Buck]

* Make sure the sudo helper understands the SuSE dialect of the sudo password prompt [Steven Wisener]

* Fix synchronization issue with Gateway initialization [Doug Barth]

* Added opt-in "compat" and "upgrade" recipes for tasks to aid in the upgrade process to Capistrano 2 [Jamis Buck]

* The deployment recipes are now opt-in. Just do 'load "deploy"' in your recipe script. [Jamis Buck]

* Added $CAPISTRANO:HOST$ placeholder in commands, which will be replaced with the name of the host on which the command is executing [Jamis Buck]

* Added -e switch to explain specific task. Added -X to extend -x. Made -h much briefer. Added -T to list known tasks. [Jamis Buck]

* Added namespaces for tasks [Jamis Buck]

* Merged the Configuration and Actor classes, performed various other massive refactorings of the code [Jamis Buck]


*1.4.1* (February 24, 2007)

* Use the no-auth-cache option with subversion so that username/password tokens do not get cached by capistrano usage [jonathan]
