@@ -51,7 +51,7 @@ module Capistrano
 
       mutex.synchronize do
         @thread = Thread.new do
-          logger.trace "starting connection to gateway `#{server.host}'" if logger
+          logger.trace "starting connection to gateway `#{server}'" if logger
           SSH.connect(server, @options) do |@session|
             logger.trace "gateway connection established" if logger
             mutex.synchronize { waiter.signal }
@@ -84,7 +84,7 @@ module Capistrano
     # Net::SSH connection via that port.
     def connect_to(server)
       connection = nil
-      logger.debug "establishing connection to `#{server.host}' via gateway" if logger
+      logger.debug "establishing connection to `#{server}' via gateway" if logger
       local_port = next_port
 
       thread = Thread.new do
@@ -92,8 +92,8 @@ module Capistrano
           local_host = ServerDefinition.new("127.0.0.1", :user => server.user, :port => local_port)
           session.forward.local(local_port, server.host, server.port || 22)
           connection = SSH.connect(local_host, @options)
-          connection.real_host = server.host
-          logger.trace "connected: `#{server.host}' (via gateway)" if logger
+          connection.xserver = server
+          logger.trace "connected: `#{server}' (via gateway)" if logger
         rescue Errno::EADDRINUSE
           local_port = next_port
           retry
@@ -104,7 +104,7 @@ module Capistrano
       end
 
       thread.join
-      connection or raise ConnectionError, "could not establish connection to `#{server.host}'"
+      connection or raise ConnectionError, "could not establish connection to `#{server}'"
     end
 
     private
